updated css and  javascript

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         </div>
     </div>
     <div class="buttons">
-        <button id="prev"><i class="fas fa-arrow-left"></i></button>
-        <button id="next"><i class="fas fa-arrow-right"></i></button>
+        <button id="prev">&lt;</button>
+        <button id="next">&gt;</button>
     </div>
 
     <script src="scripts.js"></script>
